2009-07-15  Christopher Bratusek <zanghar@freenet.de>
	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]

2009-07-10  Christopher Bratusek <zanghar@freenet.de>
	* sawfish-ksm.desktop: make sawfish appear in KDEs WM Selector

2009-07-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/move-cursor.jl: Fixed small glitch

2009-07-04  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl: make changed value of
	raise-tabs-on-hover take effect immediately

2009-07-03  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: post-release version bump to 1.6.0 [branched 1.5.0],
	bump rep-gtk requirement to 0.90.0, therefore bumped gtk+ requirement
	to 2.12.0

	* lisp/sawfish/gtk/color-preview.jl: use GtkColorButton instead of
	GtkPreview (for rep-gtk 0.90.0)

	* lisp/sawfish/wm/commands/move-cursor.jl: added 5 new move-cursor
	command 4 for moving diagonally (move-cursor -northwest, -northeast,
	southwest, southeast) and move-cursor-center

	* man/sawfish.texi: updated doc for new move-cursor-commands

	* man/news.texi: added 1.6.0 section, updated

2009-07-02  Christopher Bratusek <zanghar@freenet.de>
	* po/*
	* configure.in: de-intltoolize sawfish ... is breaking current
	sawfish-ui badly, preparative tasks for tommorows 1.5.0 release

2009-06-26  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: added --with/without-nls option [disable installing
	translations files, default=enabled]

	* scripts/Makefile.in
	* lisp/Makefile.in
	* lisp/sawfish/ui/Makefile.in
	* lisp/sawfish/gtk/Makefile.in: expand REP_ENVIRON

	* lisp/sawfish/wm/session/init.jl: set RestartStyleHint to 2
	[Christian Marillat]

	* lisp/sawfish/wm/session/load.jl: when matching window to alist try
	to match according WM_NAME if there's no WM_CLASS [Christian Marillat]

	* README.IMPORTANT
	* man/news.texi: updated

2009-06-19  Christopher Bratusek <zanghar@freenet.de>
	* themes/microGUI/theme.jl: fixed a speed-issue
