@@ -23,6 +23,8 @@ they occurred between. For more detailed information see the
 
 @item 5 new move-cursor command 4 for moving diagonally (move-cursor -northwest, -northeast, -southwest, -southeast), and move-cursor-center [Christopher Bratusek]
 
+@item Added fullscreen and new-workspace matches [Jeremy Hankins]
+
 @end itemize
 @item Other Changes:
 @itemize @minus
