@@ -1,6 +1,8 @@
 2009-07-15  Christopher Bratusek <zanghar@freenet.de>
 	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]
 
+	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen and new-workspace matches [Jeremy Hankins]
+
 2009-07-10  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish-ksm.desktop: make sawfish appear in KDEs WM Selector
 
